
   * Parse mergeWithUpstream set by svn-buildpackage.

   * Cache last revision number during read locks, significantly speeds
     up push.

   * Use different cache for experimental versions of bzr-svn.

   * Support set_user_option() on Subversion branch BranchConfig. (#195962)

   * Support credentials in URLs. (#181534)

   * Allow usage without on-disk cache. (#131008)

  INTERNALS

   * Branching from a Subversion repository will now fetch right-hand side 
     parents as well as left hand side (mainline) parents, if specified.

   * Removed revision number cache.

  BUGS

   * Avoid sometimes incorrect determination of Bazaar revision numbers. (#181773)

   * Deal with bzr:svn-revision-info property being removed. (#206728)

   * Gracefully handle erroneous svk merge tickets created by old versions of svk.

   * Use standard infrastructure for caching revision numbers. (#213953)

   * Work around bug in the Subversion libraries which don't accept 
     http(s) URLs with urlencoded characters. (#190229)

bzr-svn 0.4.9    2008-03-23

  FEATURES

   * Set revision properties when possible.

   * Avoid doing two branch property lookups when getting revision metadata.

   * Use caching revision graph.

   * --prefix is now determined from the specified url in svn-import. (#160335)

   * Support storing revision signatures.

   * Re-use file properties on branch root more efficiently. This made 
     the cache of branch properties unnecessary.

   * Avoid using copy in several places.

  BUGS
  
   * Fix compatibility with bzr 1.3.

   * Be a bit quieter with messages about experimental mappings. (#162496)

   * More correct implementation of Repository.get_ancestry(). 

   * Properly use current branching scheme when following branches. (#183361)

   * Avoid using special characters in branching scheme names because it 
     breaks over http/https. (#204759). 

  INTERNALS

   * Allow multiple mappings to be available at the same time.

  DOCUMENTATION
