@@ -33,6 +33,9 @@ bzr-svn 0.4.10  UNRELEASED
 
    * Allow usage without on-disk cache. (#131008)
 
+   * Restrict history sample size used for guessing branching scheme to avoid
+     looking at the full history for very large repositories.
+
   INTERNALS
 
    * Branching from a Subversion repository will now fetch right-hand side 
